# strava_calendar

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
scripts/: test.sh
strava_calendar/: __init__.py  data.py  plot.py  strava_calendar.py  test_data.py  test_plot.py  test_strava_calendar.py
